fixed mobile image issue dark mode gone

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,3 @@
 @tailwind components;
 @tailwind utilities;
 
-
-@layer base{
-    body {
-        @apply dark:bg-stone-500 bg-stone-200 dark:text-grey text-black 
-    }
-}
